src/objects/XO_Employees_Old__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreement_of_Technology_Use_Signed__c</fullName>
        <label>Agreement of Technology Use Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_to_Arbitration_Signed__c</fullName>
        <label>Agreement to Arbitration Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset_Tracking_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Tracking</label>
        <referenceTo>Asset_Tracking__c</referenceTo>
        <relationshipName>XO_Employees_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BIO_or_CV_Submitted__c</fullName>
        <label>BIO or CV Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BLS_Certification__c</fullName>
        <label>BLS Certification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BLS_Expiration__c</fullName>
        <label>BLS Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Background_Waiver_Signed__c</fullName>
        <label>Background Waiver Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefits_Document_Signed__c</fullName>
        <label>Benefits Document Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certificate_Number__c</fullName>
        <description>This field is for RNs and LVNs to capture their Certificate Number</description>
        <label>Certificate Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_State_and_Zip__c</fullName>
        <description>Enter the XO employee city, state and zip code</description>
        <label>City State and Zip</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_of_Professional_Conduct_Signed__c</fullName>
        <label>Code of Professional Conduct Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DEA_Expiration__c</fullName>
        <label>DEA Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DEA_Number__c</fullName>
        <label>DEA Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <description>Date of Birth</description>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Direct_Deposit_Authorization_Signed__c</fullName>
        <label>Direct Deposit Authorization Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Driver_License__c</fullName>
        <label>Driver License</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact__c</fullName>
        <description>Emergency Phone Number</description>
        <label>Emergency Contact</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employee_Street_Address__c</fullName>
        <description>Enter the employee street address</description>
        <label>Employee Street Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Application_Signed__c</fullName>
        <label>Employment Application Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employment_Type__c</fullName>
        <label>Employment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exempt</fullName>
                </value>
                <value>
                    <fullName>Non-Exempt</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>XO_Employee_First_Name__c &amp; &quot; &quot; &amp; Name</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hep_B_Vaccination_Date__c</fullName>
        <label>Hep B Vaccination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>I9_Completed__c</fullName>
        <label>I9 Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Expiration__c</fullName>
        <label>License Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <description>Professional license number for MD, PA, NP, RN</description>
        <label>License Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Number__c</fullName>
        <label>NPI Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Hire_Agreement_Signed__c</fullName>
        <label>New Hire Agreement Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Letter_Date__c</fullName>
        <label>Offer Letter Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PPD_Given__c</fullName>
        <description>Date of PPD vaccination</description>
        <label>PPD Given</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PPD_Read__c</fullName>
        <label>PPD Read</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Personal_Profile_Completion_Signed__c</fullName>
        <label>Personal Profile Completion Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <description>Enter the XO employee social security number</description>
        <label>Social Security Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sexual_Harassment_Document_Signed__c</fullName>
        <label>Sexual Harassment Document Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>W11_Completed__c</fullName>
        <label>W11 Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>W4_Completed__c</fullName>
        <label>W4 Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>XO_Division__c</fullName>
        <label>XO Division</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MSO</fullName>
                </value>
                <value>
                    <fullName>Apple SCV</fullName>
                </value>
                <value>
                    <fullName>Apple Austin</fullName>
                </value>
                <value>
                    <fullName>Apple Sacramento</fullName>
                </value>
                <value>
                    <fullName>Facebook Menlo Park</fullName>
                </value>
                <value>
                    <fullName>Applied Materials SCV</fullName>
                </value>
                <value>
                    <fullName>Qualcomm SD</fullName>
                </value>
                <value>
                    <fullName>First American</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>XO_Employee_First_Name__c</fullName>
        <label>XO Employee First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XO_Employee_Last_Name__c</fullName>
        <label>XO Employee Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XO_Employee_Phone_Number__c</fullName>
        <label>XO Employee Phone Number</label>
        <type>Phone</type>
    </fields>
    <label>XO Employees (Old)</label>
    <listViews>
        <fullName>XO_Employee_Informatioin</fullName>
        <columns>Employment_Status__c</columns>
        <columns>Full_Name__c</columns>
        <columns>Employment_Type__c</columns>
        <columns>XO_Employee_Last_Name__c</columns>
        <columns>XO_Division__c</columns>
        <columns>XO_Employee_Phone_Number__c</columns>
        <columns>BLS_Certification__c</columns>
        <columns>BLS_Expiration__c</columns>
        <columns>License_Number__c</columns>
        <columns>License_Expiration__c</columns>
        <columns>DEA_Number__c</columns>
        <columns>DEA_Expiration__c</columns>
        <columns>NPI_Number__c</columns>
        <columns>Emergency_Contact__c</columns>
        <columns>Additional_Information__c</columns>
        <filterScope>Everything</filterScope>
        <label>XO Employee Information</label>
    </listViews>
    <nameField>
        <label>XO Employee Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XO Employees (Old)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>